<resources>
    <string name="app_name">Recycler View</string>

    <!-- Navigation Drawer Components -->
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="about">About App</string>
    <string name="profile">Profile</string>

    <!-- drawer header -->
    <string name="navigation_design_a">Navigation Design A</string>

    <!-- open/ close -->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragments -->
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="about_fragment">About App Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>

    <!--  -->
    <string name="name_of_the_author">Name of the author</string>
    <string name="name_of_book">Name of Book</string>
    <string name="price_of_book">Rs. 199</string>
    <string name="sort">Sort</string>

</resources>