<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/recyclerLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_weight="1.5"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgBookImage"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/name_of_book" />

        <TextView
            android:id="@+id/txtBookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/name_of_the_author"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_toRightOf="@id/imgBookImage" />
        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_of_book"
            android:padding="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#26ae60"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/imgBookImage" />
        <TextView
            android:id="@+id/txtBookRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingHorizontal="5dp"
            android:textColor="#EEC213"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_rating"
            android:text=" 4.5" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>